fix(community-side-navigation): fix issue when side nav has overflow

--- a/packages/SideNavigation/SideNavigation.scss
+++ b/packages/SideNavigation/SideNavigation.scss
@@ -75,6 +75,11 @@ $desktop: (
   width: inherit;
 }
 
+.fixedOverflow {
+  overflow-y: auto;
+  bottom: 0px;
+}
+
 .bottomPosition {
   position: absolute;
   bottom: 0px;
